tests/invalid/Type_Invalid_12.whiley
function f(void[] p) -> int:
    return 0
    